# objverify

./: README.md  pyproject.toml  test.py
objverify/: __init__.py
